--- a/client/manifest.json
+++ b/client/manifest.json
@@ -12,5 +12,5 @@
     "background_color": "#f3cb21",
     "display": "standalone",
     "orientation": "portrait",
-    "start_url": "."
+    "start_url": "/index.html"
 }  
